--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.8.0",
     "react-typewriter-effect": "^1.1.0",
     "sweetalert2": "^11.7.1",
+    "tsparticles": "^2.8.0",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
